--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+daemonize = "0.4.1"
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
