--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 daemonize = "0.4.1"
+calloop = { version = "0.10.5", features = ["executor"] }
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
