--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gtk = { version = "0.15", features = [ "v3_22" ] }
 daemonize = "0.4.1"
 calloop = { version = "0.10.5", features = ["executor"] }
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
+anyhow = "1.0"
